--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "open-in-phpstorm",
   "description": "Open files easily in PhpStorm",
   "version": "0.0.1",
+  "publisher": "MaartenBode",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maartenbode/open-in-phpstorm"
+  },
   "engines": {
     "vscode": "^1.97.0"
   },
